--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -43,11 +43,11 @@
 
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav visible-xs">
-                        <li><a href="#">Chicken</a></li>
+                        <li><a href="#" class="text-center">Chicken</a></li>
                         <hr class="visible-xs">
-                        <li><a href="#">Beaf</a></li>
+                        <li><a href="#" class="text-center">Beaf</a></li>
                         <hr class="visible-xs">
-                        <li><a href="#">Sushi</a></li>
+                        <li><a href="#" class="text-center">Sushi</a></li>
                     </ul>
                 </div>
             </div> <!-- end of .container-->
